@@ -1,0 +1,10 @@
+# THIS FILE IS GENERATED. DO NOT EDIT!!!
+# Interface classes for using NIB files
+
+from objc import IBOutlet
+from Foundation import NSObject
+
+class PyModelBase (NSObject):
+	"Base class for class 'PyModel'"
+	pass
+
